tests/types/errors/lambda_missing_param_type.mog
var addOne fn(i32) i32 = fn(x) => x + 1
